force-app/main/default/objects/User/fields/Actual_Sales_By_Month_Report__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sales_By_Month_Report__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Actual Sales By Month Report</label>
    <type>Checkbox</type>
</CustomField>