force-app/main/default/objects/User/fields/Assessment_Summary_Report__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Summary_Report__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Assessment Summary Report</label>
    <type>Checkbox</type>
</CustomField>