force-app/main/default/objects/User/fields/Bad_Debt_Summary_Report__c.field-meta.xml
<CustomField>
    <fullName>Bad_Debt_Summary_Report__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Bad Debt Summary Report</label>
    <type>Checkbox</type>
</CustomField>