force-app/main/default/objects/User/fields/Can_Edit_Approved_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Can_Edit_Approved_Credit_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Edit Approved Credit Limit</label>
    <type>Checkbox</type>
</CustomField>