force-app/main/default/objects/User/fields/Can_Edit_Assessment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Can_Edit_Assessment_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Edit Assessment Schedule</label>
    <type>Checkbox</type>
</CustomField>