force-app/main/default/objects/User/fields/Can_Send_for_Google_Review__c.field-meta.xml
<CustomField>
    <fullName>Can_Send_for_Google_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Send for Google Review</label>
    <type>Checkbox</type>
</CustomField>