force-app/main/default/objects/User/fields/Critical_Items_Dates__c.field-meta.xml
<CustomField>
    <fullName>Critical_Items_Dates__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field controls the visibility of critical items &amp; dates
 report to the user.</description>
    <label>Critical Items &amp; Dates</label>
    <type>Checkbox</type>
</CustomField>