force-app/main/default/objects/User/fields/Custom_Reports__c.field-meta.xml
<CustomField>
    <fullName>Custom_Reports__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom Reports</label>
    <type>Checkbox</type>
</CustomField>