force-app/main/default/objects/User/fields/Drawdowns__c.field-meta.xml
<CustomField>
    <fullName>Drawdowns__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Drawdowns</label>
    <type>Checkbox</type>
</CustomField>