force-app/main/default/objects/User/fields/EFT_Originator_Id__c.field-meta.xml
<CustomField>
    <fullName>EFT_Originator_Id__c</fullName>
    <label>EFT Originator Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>