force-app/main/default/objects/User/fields/Finance_Loan_Progression_Report__c.field-meta.xml
<CustomField>
    <fullName>Finance_Loan_Progression_Report__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Finance Loan Progression Report</label>
    <type>Checkbox</type>
</CustomField>