force-app/main/default/objects/User/fields/Financial_Summary__c.field-meta.xml
<CustomField>
    <fullName>Financial_Summary__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Financial Summary</label>
    <type>Checkbox</type>
</CustomField>