force-app/main/default/objects/User/fields/Financial_Summary_Report__c.field-meta.xml
<CustomField>
    <fullName>Financial_Summary_Report__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field controls the visibility of financial summary report to the user.</description>
    <label>Financial Summary Report</label>
    <type>Checkbox</type>
</CustomField>