force-app/main/default/objects/User/fields/Financing_Statement_Details__c.field-meta.xml
<CustomField>
    <fullName>Financing_Statement_Details__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Financing Statement Details</label>
    <type>Checkbox</type>
</CustomField>