force-app/main/default/objects/User/fields/Funding_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Funding_Dashboard__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Funding Dashboard</label>
    <type>Checkbox</type>
</CustomField>