force-app/main/default/objects/User/fields/Funding_Summary__c.field-meta.xml
<CustomField>
    <fullName>Funding_Summary__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Funding Summary</label>
    <type>Checkbox</type>
</CustomField>