force-app/main/default/objects/User/fields/Funding_Tab__c.field-meta.xml
<CustomField>
    <fullName>Funding_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User can do everything on the funding tab except send to bank</description>
    <label>Funding Tab</label>
    <type>Checkbox</type>
</CustomField>