force-app/main/default/objects/User/fields/Generate_Banking_Sheets__c.field-meta.xml
<CustomField>
    <fullName>Generate_Banking_Sheets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can generate banking sheets in the funding tab</description>
    <label>Generate Banking Sheets</label>
    <type>Checkbox</type>
</CustomField>