force-app/main/default/objects/User/fields/Law_Firm_Sales_Summary_Report__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Sales_Summary_Report__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Law Firm Sales Summary Report</label>
    <type>Checkbox</type>
</CustomField>