force-app/main/default/objects/User/fields/Law_Firm_Summary__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Summary__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field controls the visibility of law firm summary report to the user.</description>
    <label>Law Firm Summary</label>
    <type>Checkbox</type>
</CustomField>