force-app/main/default/objects/User/fields/Law_Society_Review__c.field-meta.xml
<CustomField>
    <fullName>Law_Society_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Law Society Review</label>
    <type>Checkbox</type>
</CustomField>