force-app/main/default/objects/User/fields/Lawyer_Sales_Summary__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Sales_Summary__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lawyer Sales Summary</label>
    <type>Checkbox</type>
</CustomField>