force-app/main/default/objects/User/fields/Lawyer_Summary__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Summary__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field controls visibility of lawyer summary report to the user.</description>
    <label>Lawyer Summary</label>
    <type>Checkbox</type>
</CustomField>