force-app/main/default/objects/User/fields/Loan_Set_up__c.field-meta.xml
<CustomField>
    <fullName>Loan_Set_up__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Loan Set-up</label>
    <type>Checkbox</type>
</CustomField>