force-app/main/default/objects/User/fields/Lump_Sum_drawdowns__c.field-meta.xml
<CustomField>
    <fullName>Lump_Sum_drawdowns__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lump Sum drawdowns</label>
    <type>Checkbox</type>
</CustomField>