force-app/main/default/objects/User/fields/Modify_Notes__c.field-meta.xml
<CustomField>
    <fullName>Modify_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field controls delete and edit access of Account notes.</description>
    <label>Modify Notes</label>
    <type>Checkbox</type>
</CustomField>