force-app/main/default/objects/User/fields/Payment_Summary_Report__c.field-meta.xml
<CustomField>
    <fullName>Payment_Summary_Report__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Payment Summary Report</label>
    <type>Checkbox</type>
</CustomField>