force-app/main/default/objects/User/fields/Payments_tab__c.field-meta.xml
<CustomField>
    <fullName>Payments_tab__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Payments tab</label>
    <type>Checkbox</type>
</CustomField>