force-app/main/default/objects/User/fields/Payout_Details__c.field-meta.xml
<CustomField>
    <fullName>Payout_Details__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Payout Details</label>
    <type>Checkbox</type>
</CustomField>