force-app/main/default/objects/User/fields/Schedule_Payments__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule Payments</label>
    <type>Checkbox</type>
</CustomField>