force-app/main/default/objects/User/fields/Scheduled_Payments_Admin__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Payments_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Payments Admin</label>
    <type>Checkbox</type>
</CustomField>