force-app/main/default/objects/User/fields/Treatment_Providers__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Providers__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Treatment Providers</label>
    <type>Checkbox</type>
</CustomField>