force-app/main/default/objects/User/fields/wtn__KwagaPairingStatus__c.field-meta.xml
<CustomField>
    <fullName>wtn__KwagaPairingStatus__c</fullName>
    <label>Kwaga Pairing Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>