force-app/main/default/objects/User/validationRules/EFT_Originator_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>EFT_Originator_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISCHANGED(EFT_Originator_Id__c), NOT($Permission.EFT_Permission))</errorConditionFormula>
    <errorDisplayField>EFT_Originator_Id__c</errorDisplayField>
    <errorMessage>You are not allowed to change this field. Please contact Larry or Nicole to update</errorMessage>
</ValidationRule>